# obviews

./: .gitignore  CMakeLists.txt  README.md  config.json  index.html
BE-partiehtml/: about.html  index.html  mode-d'emploi.html  style.css
data/obviews/: about.html  ajax.js  help.html  index.html  obviews.js  requeteHTTP.js  style.css  test.html
data/obviews/tests/: testTemplate.html
documentation/doc-api-serveur/: Arrêter le serveur.md  Définir les valeurs du serveur.md  Exécuter WCET.md  Index.md  Page d'accueil application.md  Récupérer des fichiers ressources.md  Récupérer la liste des cfgs.md  Récupérer la liste des scriptes pour WCET.md  Récupérer le code source avec statistique.md  Récupérer les valeurs du serveur.md  Récupérer un graphe de flot (cfg).md
resources/css/: style.css
resources/html/: about.html
resources/javascript/: graphScripts.js  requeteHTTP.js  template.html
resources/javascript/tests/: testIndex.html  testJS.js
src/: config.json  serv.py
src/resources/: index.html  zone-de-test.html
src/resources/css/: style.css
src/resources/html/: about.html  mode-d'emploi.html
src/resources/javascript/: ajax.js  requeteHTTP.js  template.html
test/: bs.elf  bs.ff
